force-app/main/default/objects/DuplicateClusterMember__c/DuplicateClusterMember__c.object-meta.xml
<CustomObject>
    <description>Represents a single record that belongs to a duplicate cluster. Master-Detail to DuplicateCluster__c enables cascade delete and roll-up summaries.</description>
    <label>Duplicate Cluster Member</label>
    <nameField>
        <label>Member Name</label>
        <type>AutoNumber</type>
        <displayFormat>DCM-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Duplicate Cluster Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>