force-app/main/default/objects/DuplicateClusterMember__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <label>Cluster</label>
    <referenceTo>DuplicateCluster__c</referenceTo>
    <relationshipLabel>Cluster Members</relationshipLabel>
    <relationshipName>ClusterMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>