force-app/main/default/objects/DuplicateClusterMember__c/fields/FieldSnapshotJSON__c.field-meta.xml
<CustomField>
    <fullName>FieldSnapshotJSON__c</fullName>
    <label>Field Snapshot JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>