force-app/main/default/objects/DuplicateClusterMember__c/fields/IsMaster__c.field-meta.xml
<CustomField>
    <fullName>IsMaster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Master</label>
    <type>Checkbox</type>
</CustomField>